<resources>
    <string name="app_name">ViewsTest</string>
    <string name="user">Usuario Random</string>
    <string name="nav_hi">Hola Usuario Random</string>
    <string name="level">Nivel</string>

    <string-array name="countries_array">
        <item>Afganistan</item>
        <item>Albania</item>
        <item>Alegeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>

    <string name="bar_title">Menu serio</string>
    <string name="menu_running">Runnig</string>
    <string name="menu_record">Historial</string>
    <string name="menu_becamepremium">Hazte premium</string>
    <string name="menu_clearpreferences">Reestablecer Ajustes</string>
    <string name="menu_singout">Cerrar sesion</string>
    <string name="menu_offercourse">Quieres aprender a desarrollar apps? Entra aqui</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>


</resources>