<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_item_main"
            android:title="@string/menu_running"
            android:icon="@drawable/ic_rocket">
        </item>
        <item
            android:id="@+id/nav_item_record"
            android:title="@string/menu_record"
            android:icon="@drawable/ic_history">
        </item>
        <item
            android:id="@+id/nav_item_premium"
            android:title="@string/menu_becamepremium"
            android:icon="@android:drawable/star_on">
        </item>
    </group>
    <item android:title="Cuenta">
        <menu>
            <item android:id="@+id/nav_item_clearpreferences"
                android:title="@string/menu_clearpreferences"
                android:icon="@android:drawable/ic_popup_sync">
            </item>
            <item android:id="@+id/nav_item_singout"
                android:title="@string/menu_singout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel">
            </item>
        </menu>
    </item>
    <item android:title="Anuncio">
        <menu>
            <item android:id="@+id/nav_item_offer"
                android:icon="@android:drawable/ic_menu_compass"
                android:title="@string/menu_offercourse">
            </item>
        </menu>
    </item>
</menu>